fix misaligned tooltip

--- a/src/app/components/import-annotations/add-annotations/add-annotations.component.scss
+++ b/src/app/components/import-annotations/add-annotations/add-annotations.component.scss
@@ -27,3 +27,12 @@
 .additional-file-tags {
   width: 100%;
 }
+
+.missing-field-warning {
+  display: flex;
+  align-items: center;
+
+  // we set fit-content so that the box model that the tooltip is attached to
+  // is the same size as the text and will be directly above the text
+  width: fit-content;
+}
